[package]
name = "mm_service"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[dependencies]
actix-web = "4"
diesel = { version = "2", features = ["postgres", "r2d2"] }
r2d2 = "0.8"
redis = { version = "0.27", features = ["r2d2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
dotenvy = "0.15"

[profile.release]
opt-level = 3
